fix/Ensure text in popover is aligned left

--- a/app/assets/stylesheets/popover.scss
+++ b/app/assets/stylesheets/popover.scss
@@ -5,7 +5,8 @@
     position: absolute;
     border-radius: 5px;
     box-shadow: 0 0 6px rgba(0,0,0,.3);
-    width: 100px;
+    width: 120px;
+    text-align: left;
     z-index: 5;
     padding: 8px 0px;
     font-size: 14px;
